--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,10 @@
     image-rendering: crisp-edges;
     image-rendering: pixelated;
     font-family: 'arcadeclassicregular';
+    font-weight: normal;
+    -webkit-font-smoothing: none;
+    -moz-osx-font-smoothing: unset;
+    text-rendering: optimizeSpeed;
 }
 
 #loading-screen {
@@ -85,14 +89,67 @@
     margin-bottom: 20px;
 }
 
+#user-details {
+    margin-left: 0px 0px 10px 10px;
+}
+
+#user-details h1 {
+    padding-left: 3px;
+}
+.progress-container {
+    width: 120%;
+    height: 20px;
+    background-color: #f0f0f0;
+    border: 2px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: #4CAF50;
+    width: 0%;
+    border-radius: 8px;
+}
+
 #todo-list {
     display: flex;
-    justify-content: center;
-    text-align: center;
+    align-items: center;
     flex-direction: column;
+    width: 90%;
+    height: 100%;
+    margin-bottom: 3%;
     border: black 2px solid;
+    padding: 20px;
 }
 #todo-list h1 {
-    font-size: 2em;
-    margin: 0;
+    height: auto;
+    border-bottom: black 2px solid;
+    margin-bottom: 20px;
+}
+
+#todo-input {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
+    outline: none;
+}
+
+#todo-input input {
+    width: 100%;
+    height: 100%;
+    border: 2px solid black;
+    padding: 10px;
+    font-family: 'arcadeclassicregular';
+    font-size: 12px;
+    background-color: white;
+
+}
+
+#todo-input ::placeholder {
+    color: #888;
+    font-size: 12px;
 }
